# tabmon_reporting

./: .copier-answers.yml  .gitignore  README.md  Rapport TABMON FR.ipynb  Rapport TABMON.ipynb  TABMON report.ipynb  TABMON_MULTILINGUAL_KEY.csv  TABMON_report.ipynb  custom_template.tex.j2  pyproject.toml  report_for_all_clusters.sh  requirements.txt
report/: tabmon_reports.qmd
report/scripts/: data_processor.py  plots.py  utils.py
