
[project]
authors = [
  {name = "benjamin cretois", email = "benjamin.cretois@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "django-environ",
  "duckdb>=1.4.3",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.7",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "papermill>=2.6.0",
  "pyarrow>=22.0.0",
  "pyyaml>=6.0.3",
  "seaborn>=0.13.2",
]
description = ""
license = "GPL-3.0+"
name = "tabmon_reports"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[dependency-groups]
dev = [
  "deptry",
  "ipykernel",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
quarto = ">=1.8.26,<2"
texlive-core = ">=20230313,<20230314"
papermill = ">=2.6.0,<3"
